-----------------------------
 Change history for MATPOWER
-----------------------------

Version:    6.0b1

maintained by Ray Zimmerman <rz10@cornell.edu>

MATPOWER
Copyright (c) 1996-2016 by Power System Engineering Research Center (PSERC)
See http://www.pserc.cornell.edu/matpower/ for more info.

For change history for MOST, see most/docs/CHANGES.

Changes since 6.0b1
-----------------

10/13/16
    - Added 'opf.use_vg' option to provide a convenient way to have the
      OPF respect the generator voltage setpoints specified in the gen
      matrix.

10/4/16
    - Improve backward compatibility of mpoption(), allow it to handle
      old-style option vectors from earlier versions of MATPOWER, namely
      3.2 and 4.0, and to accept on old style options vector with new-style
      name/value pair option overrides.

9/22/16
    - Update tests for compatibility with Optimization Toolbox 7.5 (R2016b),
      which removes 'active-set' algorithm for quadprog() and 'active-set'
      and 'simplex' for linprog().
    - Fix fatal error when using some SDP_PF functions when CPLEX is not
      installed.

9/19/16
    - Fix dimension bug in makeBdc() when last bus is not connected (should
      never happen if bus is properly marked as type NONE).

8/15/16
    - Fix a harmless bug in @opt_model where variable, constraint and
      cost sets indexed by a single variable would allocate a square
      matrix of starting and ending indices, rather than a simple vector.
      Thanks to Alberto Lamadrid for catching this.

7/18/16
    - Extract computation of tangent vector from cpf_predictor() into
      cpf_tangent(), and call sequentially as needed.

7/11/16
    - Add step size to CPF callback args and results logging.
    - Add option 'cpf.adapt_step_damping' to control oscillations in
      adaptive step size control for continuation power flow.

7/8/16
    - Updated network reduction code to handle cases with radially connected
      external buses.

7/1/16